# nextjs-starter-template

./: .env.example  README.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.ts
backend/: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: database.py  dependencies.py  main.py
backend/app/api/routers/: chat.py
backend/app/models/: __init__.py  chat_session.py  message.py  profile.py
backend/app/schemas/: chat.py
backend/app/services/: chat_service.py
frontend/: .cursorrules  .env.example  Dockerfile  package-lock.json  package.json
frontend/src/app/: LandingPage.tsx  layout.tsx  page.tsx
frontend/src/app/login/: SignIn.tsx  page.tsx
frontend/src/app/signup/: SignUp.tsx  page.tsx
frontend/src/components/: Navbar.tsx  Sidebar.tsx
frontend/src/context/: AuthContext.tsx  ChatSessionContext.tsx
frontend/src/example/: chat.route.ts
frontend/src/services/: chatService.ts
frontend/src/types/: chat.interface.ts
frontend/src/utils/: api.ts  fetchWithAuth.ts  useApiRequest.tsx
src/app/: globals.css  layout.tsx  page.tsx
src/app/components/: Navbar.tsx  OAuthButton.tsx  Sidebar.tsx  ThemeModeToggle.tsx
src/app/context/: AuthContext.tsx
src/app/login/: SignIn.tsx  page.tsx
src/app/signin/: SignIn.tsx  page.tsx
src/app/signup/: SignUp.tsx  page.tsx
src/components/chat/: Avatar.tsx  EmptyScreen.tsx  ExampleChatsPanel.tsx  Markdown.tsx  Messages.tsx
src/components/ui/: form.tsx
src/types/: chat.interface.ts  message.ts
src/utils/supabase/: middleware.ts  server.ts
(+23 files in other folders)
